--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="main-content" id="main-content"></div>
+        <div class="main-content" id="main-content">Hello World</div>
     </body>
 </html>
