html data attributes added for business requirements

--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
-        <script src="bundle.js"></script>
+        <title>Moosic Band</title>
         <link rel="stylesheet" href="./frontend/css/styles.css"></link>
-        <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet">
+        <script src="bundle.js"></script>
     </head>
     <body>
-        <div class="main-content" id="main-content"></div>
+        <div class="main-content" id="main-content">
+        </div>
+        <div>
+            <ul id="album-list">
+                <li
+                data-artist-title="Moosic"
+                data-album-title="Untitled"
+                data-song-length-seconds="230"
+                data-song-title="You don't really love me"
+                ></li>
+            </ul>
+        </div>
     </body>
 </html>
