--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
     </head>
     <body>
         <div class="main-content" id="main-content"></div>
-        <ul id="album-list">
+        <ul id="playListData">
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="230"
+            data-song-duration-seconds="230"
             data-song-title="You don't really love me"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="263"
+            data-song-duration-seconds="263"
             data-song-title="So done with you"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="237"
+            data-song-duration-seconds="237"
             data-song-title="I actually still love you"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="248"
+            data-song-duration-seconds="248"
             data-song-title="Call me back please"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="195"
+            data-song-duration-seconds="195"
             data-song-title="Bye baby bye"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="226"
+            data-song-duration-seconds="226"
             data-song-title="We together"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-length-seconds="245"
+            data-song-duration-seconds="245"
             data-song-title="Together Forever"
             ></li>
         </ul>
