FOUC-fix by preloading font and hosting font in project directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Moosic Band</title>
-        <link rel="stylesheet" href="./frontend/css/styles.css"></link>
+        <link rel="preload" as="font" type="font/woff2"
+        href="./frontend/css/fonts/syncopate-v11-latin-regular.woff2">
+        <link rel="stylesheet" href="./frontend/css/styles.css" type="text/css">
         <script src="bundle.js"></script>
     </head>
     <body>
