media queries added and bad colors

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <title>Moosic Band</title>
         <link rel="preload" as="font" type="font/woff2"
         href="./frontend/css/fonts/syncopate-v11-latin-regular.woff2">
+        <style>html{visibility: hidden;opacity:0;}</style>
         <link rel="stylesheet" href="./frontend/css/styles.css" type="text/css">
         <script src="bundle.js"></script>
     </head>
     <body>
-        <div class="main-content" id="main-content"></div>
+        <main class="main-content" id="main-content"></main>
         <ul id="playListData">
             <li
             data-artist-title="Moosic"
