js time functions added, favicon for tab icon added, additional styling added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Moosic Band</title>
+        <title>Moosic Band | New Album</title>
+        <meta name="KEYWORDS" content="Moosic, Playlist, New Album">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="language" content="en">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta property="og:title" content="Moosic Band | New Album">
+        <meta property="og:description" content="Sample Moosik's new album debut & Contact Us">
+        <meta property="og:url" content="https://spanishiwa.github.io/Moosic/">
+        <link rel="shortcut icon" type="image/x-icon" href="./frontend/images/favicon.ico" />
         <link rel="preload" as="font" type="font/woff2"
         href="./frontend/css/fonts/syncopate-v11-latin-regular.woff2">
         <style>html{visibility: hidden;opacity:0;}</style>
@@ -15,43 +22,43 @@
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="230"
+            data-song-duration-secs="230"
             data-song-title="You don't really love me"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="263"
+            data-song-duration-secs="263"
             data-song-title="So done with you"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="237"
+            data-song-duration-secs="237"
             data-song-title="I actually still love you"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="248"
+            data-song-duration-secs="248"
             data-song-title="Call me back please"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="195"
+            data-song-duration-secs="195"
             data-song-title="Bye baby bye"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="226"
+            data-song-duration-secs="226"
             data-song-title="We together"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
-            data-song-duration-seconds="245"
+            data-song-duration-secs="245"
             data-song-title="Together Forever"
             ></li>
         </ul>
