readme updated to reflect materializecss removal. songs uploaded. react play songs logic added

--- a/index.html
+++ b/index.html
@@ -24,42 +24,49 @@
             data-album-title="Untitled"
             data-song-duration-secs="230"
             data-song-title="You don't really love me"
+            data-mp3-src="./frontend/sounds/lematire-we-got-you.mp3"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
             data-song-duration-secs="263"
             data-song-title="So done with you"
+            data-mp3-src="./frontend/sounds/grandson-bury-me-face-down.mp3"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
             data-song-duration-secs="237"
             data-song-title="I actually still love you"
+            data-mp3-src="./frontend/sounds/sam-tinnesz-babel-(alternate-version).mp3"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
             data-song-duration-secs="248"
             data-song-title="Call me back please"
+            data-mp3-src="./frontend/sounds/alec-benjamin-outrunning-karma.mp3"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
             data-song-duration-secs="195"
             data-song-title="Bye baby bye"
+            data-mp3-src="./frontend/sounds/mike-taylor-everything-black.mp3"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
             data-song-duration-secs="226"
             data-song-title="We together"
+            data-mp3-src="./frontend/sounds/muse-map-of-the-problematique.mp3"
             ></li>
             <li
             data-artist-title="Moosic"
             data-album-title="Untitled"
             data-song-duration-secs="245"
             data-song-title="Together Forever"
+            data-mp3-src="./frontend/sounds/glass-animals-youth.mp3"
             ></li>
         </ul>
     </body>
